--- a/styles/style.css
+++ b/styles/style.css
@@ -5,19 +5,18 @@
 
 body {
     height: 100vh;
-    
 }
 
 #espaco {
     width: 100%;
     height: 100%;
     background-size: 100%;
-    background-image: url("/Desafio11/imagens/espaco.jpg");
+    background-image: url("/imagens/espaco.jpg");
     
 }
 
 .astronauta {
-    background-image: url("/Desafio11/imagens/astronauta.png");
+    background-image: url("/imagens/astronauta.png");
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
